--- a/css/main.css
+++ b/css/main.css
@@ -37,6 +37,7 @@ body {
 	letter-spacing: 5px;
 	overflow: hidden;
 	clip: rect(0, auto, auto, 0);
+	-webkit-clip: rect(0, auto, auto, 0);
 
 	color: #fff;
 	/*top: (100vh * (1 - 1));*/	
@@ -91,6 +92,7 @@ body {
 	z-index: 2;
 	top: 100vh;
 	clip-path: polygon(0 0, 0% 100%, 100% 0);
+	-webkit-clip-path: polygon(0 0, 0% 100%, 100% 0);
 }
 #page_2b{
 	background-color: #692e4e; /*purple*/
@@ -98,6 +100,7 @@ body {
 	z-index: 3;
 	top: 100vh;
 	clip-path: polygon(0 100%, 100% 0, 100% 100%);
+	-webkit-clip-path: polygon(0 100%, 100% 0, 100% 100%);
 }
 #page_3{
 	background-color: #84142d;/*red*/
@@ -105,6 +108,7 @@ body {
 	z-index: 4;
 	top: 200vh;
 	clip-path: polygon(0 0, 0 100%, 100% 100%);
+	-webkit-clip-path: polygon(0 0, 0 100%, 100% 100%);
 }
 #page_3b{
 	background-color: #692e4e;/*purple*/
@@ -112,6 +116,7 @@ body {
 	z-index: 5;
 	top: 200vh;
 	clip-path: polygon(0 0, 100% 0, 100% 100%);
+	-webkit-clip-path: polygon(0 0, 100% 0, 100% 100%);
 }
 #page_4{
 	background-color: #84142d;/*red*/
@@ -125,6 +130,7 @@ body {
 	z-index: 7;
 	top: 400vh;
 	clip-path: polygon(0 0, 0% 100%, 100% 0);
+	-webkit-clip-path: polygon(0 0, 0% 100%, 100% 0);
 }
 #page_5b{
 	background-color: #692e4e;/*purple*/
@@ -132,6 +138,7 @@ body {
 	z-index: 8;
 	top: 400vh;
 	clip-path: polygon(0 100%, 100% 0, 100% 100%);
+	-webkit-clip-path: polygon(0 100%, 100% 0, 100% 100%);
 }
 
 #page_6{
@@ -140,6 +147,7 @@ body {
 	z-index: 9;
 	top: 500vh;
 	clip-path: polygon(0 0, 15% 20%, 18% 50%, 30% 55%  ,35% 75%, 55% 78%, 70% 100%, 100% 100%, 100% 0);
+	-webkit-clip-path: polygon(0 0, 15% 20%, 18% 50%, 30% 55%  ,35% 75%, 55% 78%, 70% 100%, 100% 100%, 100% 0);
 }
 
 #page_6b{
@@ -148,6 +156,7 @@ body {
 	z-index: 10;
 	top: 500vh;
 	clip-path: polygon(0 0, 15% 20%, 18% 50%, 30% 55%  ,35% 75%, 55% 78%, 70% 100%, 100% 100%, 0 100%);
+	-webkit-clip-path: polygon(0 0, 15% 20%, 18% 50%, 30% 55%  ,35% 75%, 55% 78%, 70% 100%, 100% 100%, 0 100%);
 
 }
 #page_7{
@@ -156,6 +165,7 @@ body {
 	z-index: 11;
 	top: 600vh;
 	clip-path: polygon(0 0, 100% 0, 85% 20%, 82% 50%, 70% 55% ,65% 75%, 45% 78%, 30% 100%, 0% 100%);
+	-webkit-clip-path: polygon(0 0, 100% 0, 85% 20%, 82% 50%, 70% 55% ,65% 75%, 45% 78%, 30% 100%, 0% 100%);
 }
 
 #page_7b{
@@ -164,6 +174,7 @@ body {
 	z-index: 12;
 	top: 600vh;
 	clip-path: polygon(100% 0, 85% 20%, 82% 50%, 70% 55% ,65% 75%, 45% 78%, 30% 100%, 100% 100%);
+	-webkit-clip-path: polygon(100% 0, 85% 20%, 82% 50%, 70% 55% ,65% 75%, 45% 78%, 30% 100%, 100% 100%);
 }
 
 #page_8{
@@ -185,6 +196,7 @@ body {
 	z-index: 14;
 	top: 800vh;
 	clip-path: polygon(40% 50%, 50% 5%, 50% 95%);
+	-webkit-clip-path: polygon(40% 50%, 50% 5%, 50% 95%);
 	/*clip-path: polygon(30% 50%, 50% 5%, 50% 95%);*/
 }
 
@@ -194,6 +206,7 @@ body {
 	z-index: 14;	
 	top: 800vh;
 	clip-path: polygon(50% 5%, 50% 95%, 60% 50%);
+	-webkit-clip-path: polygon(50% 5%, 50% 95%, 60% 50%);
 	/*clip-path: polygon(50% 5%, 50% 95%, 70% 50%);*/
 }
 
@@ -203,6 +216,7 @@ body {
 	z-index: 15;
 	top: 900vh;
 	clip-path: polygon(0 0, 25% 50%, 50% 0, 75% 50%, 100% 0);
+	-webkit-clip-path: polygon(0 0, 25% 50%, 50% 0, 75% 50%, 100% 0);
 	/*clip-path: polygon(50% 20%, 65% 0, 80% 10%, 90% 36%, 75% 75%, 50% 100%, 25% 75%, 10% 35%, 20% 10%, 35% 0);*/
 }
 
@@ -212,6 +226,7 @@ body {
 	z-index: 15;
 	top: 900vh;
 	clip-path: polygon(0 0, 25% 50%, 50% 0, 50% 100%, 0 100%);
+	-webkit-clip-path: polygon(0 0, 25% 50%, 50% 0, 50% 100%, 0 100%);
 }
 #page_10c{
 	background-color: #692e4e;/*purple*/
@@ -219,6 +234,7 @@ body {
 	z-index: 15;
 	top: 900vh;
 	clip-path: polygon(50% 0, 75% 50%, 100% 0, 100% 100%, 50% 100%);
+	-webkit-clip-path: polygon(50% 0, 75% 50%, 100% 0, 100% 100%, 50% 100%);
 }
 
 #page_11{
@@ -227,6 +243,7 @@ body {
 	z-index: 15;
 	top: 1000vh;
 	clip-path: polygon(0 0, 50% 0, 50% 100% , 0 100%);
+	-webkit-clip-path: polygon(0 0, 50% 0, 50% 100% , 0 100%);
 }
 #page_11b{
 	background-color: #692e4e;/*purple*/
@@ -234,6 +251,7 @@ body {
 	z-index: 15;
 	top: 1000vh;
 	clip-path: polygon(50% 0, 100% 0, 100% 100%, 50% 100%);
+	-webkit-clip-path: polygon(50% 0, 100% 0, 100% 100%, 50% 100%);
 }
 
 .linebreak{
@@ -285,9 +303,11 @@ body {
 	}
   	#page_9b{
 		clip-path: polygon(30% 50%, 50% 5%, 50% 95%);
+		-webkit-clip-path: polygon(30% 50%, 50% 5%, 50% 95%);
 	}
 	#page_9c{
 		clip-path: polygon(50% 5%, 50% 95%, 70% 50%);
+		-webkit-clip-path: polygon(50% 5%, 50% 95%, 70% 50%);
 	}
 	.linebreak{
 	  	display: block;
